--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "static-site",
+  "name": "professional-readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "command line interface to create a README.md file",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miguelxosorio/Professional-README-generator.git"
+  },
+  "author": "Miguel Osorio",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.5.2"
