--- a/Develop/package.json
+++ b/Develop/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miguelxosorio/Professional-README-generator.git"
+    "url": "https://github.com/miguelxosorio/Professional-README-generator.git"
   },
   "author": "Miguel Osorio",
   "license": "ISC",
